Prevent material symbol font text from showing
Great change here; prevent the ligature text from displaying by blocking
font rendering from showing during fallback font rendering.  Happens on
load and also with layout shifts in some cases.

--- a/pages/scss/common.scss
+++ b/pages/scss/common.scss
@@ -13,6 +13,7 @@
     font-family: 'Material Symbols Rounded';
     font-style: normal;
     font-weight: 100 700;
+    font-display: block;
     src: url('../fonts/MaterialSymbolsRounded.woff2?v=2') format('woff2');
 }
 
